Categories look and feel

--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -4,7 +4,7 @@
   class="category"
 >
   <div class="category-icon">
-    <mat-icon [style.color]="category.color || 'black'">{{category.icon}}</mat-icon>
+    <mat-icon>{{category.icon}}</mat-icon>
   </div>
   <div class="category-title" [innerText]="category.title"></div>
 </div>
