--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="col-md-9 market-icons">
-      <span class="info">Apps available soon for</span>
+      <span class="info">Apps available soon in</span>
       <a href="/">
         <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/storeBadges/badge_apple_app_store_en.png" alt="App Store" height="25">
       </a>
