--- a/src/app/components/scrollbar/scrollbar.component.scss
+++ b/src/app/components/scrollbar/scrollbar.component.scss
@@ -3,7 +3,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-    margin: 20px 0;
+    margin: 10px 0;
 
     .nav-scrollbar-left {
       position: relative;
@@ -14,13 +14,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: rgba(0,0,0,0.05);
+      background: #ffffff;
       z-index: 1;
       cursor: pointer;
       margin-right: 10px;
 
       &:hover {
-        background: rgba(0,0,0,0.1);
+        background: #a7e3e8;
       }
     }
 
@@ -33,13 +33,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: rgba(0,0,0,0.05);
+      background: #ffffff;
       z-index: 1;
       cursor: pointer;
       margin-left: 10px;
 
       &:hover {
-        background: rgba(0,0,0,0.1);
+        background: #a7e3e8;
       }
     }
 
@@ -52,17 +52,17 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: rgba(0,0,0,0.05);
+      background: #ffffff;
       z-index: 1;
       cursor: pointer;
       margin: 0 10px;
 
       &.active {
-        background: rgba(0,0,0,0.2);
+        background: #a7e3e8;
       }
 
       &:hover {
-        background: rgba(0,0,0,0.1);
+        background: #a7e3e8;
       }
     }
   }
