--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -7,19 +7,22 @@
     flex-shrink: 0;
     flex-direction: column;
     padding-bottom: 12px;
-    margin-bottom: 15px;
     cursor: pointer;
     align-items: center;
+    background-color: #25b9c6;
+    border: 0.5px solid #ffffff;
+    color: #ffffff;
 
     &:hover {
-      background: rgba(0, 0, 0, 0.02);
-      border-radius: 4px;
+      background: #ffffff;
+      border: 0.5px solid #25b9c6;
+      color: #25b9c6;
     }
 
     &.active {
-      background: rgba(0, 0, 0, 0.05);
-      border-radius: 4px;
-      box-shadow: inset 0 2px 2px rgba(0,0,0,0.3);
+      background: #ffffff;
+      border: 0.5px solid #25b9c6;
+      color: #25b9c6;
     }
 
     .category-icon {
