--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -12,4 +12,4 @@
   </div>
 </ng-scrollbar>
 
-<div *ngIf="!selectedTiles.length" class="text-secondary text-center">Empty</div>
+<div *ngIf="!selectedTiles.length" class="text-secondary text-center">Empty cart</div>
