--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -1,13 +1,12 @@
 :host {
   .sum {
     display: flex;
-    padding: 10px;
     font-size: 20px;
     font-weight: 500;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid #eee;
-    margin-bottom: 20px;
+    border-bottom: 1px solid #a7e3e8;
+    margin-bottom: 5px;
     width: 100%;
   }
 
