Changed background picture

--- a/src/app/components/why-hiber/why-hiber.component.html
+++ b/src/app/components/why-hiber/why-hiber.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="shopping-description">
             <h3 class="h3">Are you in the same state as the person in the video when it comes to grocery shopping. Too work work right ! Not any more.</h3>
-            <p>Hiber platform does everything for you. Hiber not only helps you save money but also time and effort. Makes grocery shopping a hassel free process.</p>
+            <p>Hiber platform does everything for you. Hiber not only helps you save money but also save time and effort. Makes grocery shopping a hassel free process.</p>
 
             <mat-list>
                 <mat-list-item *ngFor="let shopping of shoppingList">
