--- a/src/app/components/why-hiber/why-hiber.component.scss
+++ b/src/app/components/why-hiber/why-hiber.component.scss
@@ -1,7 +1,7 @@
 :host {
     .shopping {
       width: 100%;
-      background: #25b9c6;
+      background: #25b9c6 url("/assets/why-hiber/background-pic.png") repeat;
 
       .container {
         max-width: 1200px;
