--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,6 +1,7 @@
 <div
-  [class.active]="category.id === selectedCategory"
-  [style.width.px]="categoryWidth"
+  [class.active]="category.id === selectedCategoryId"
+  [style.width.px]="categorySize"
+  [style.height.px]="categorySize"
   class="category"
 >
   <div class="category-icon">
