--- a/src/app/components/search-products/search-products.component.html
+++ b/src/app/components/search-products/search-products.component.html
@@ -5,6 +5,6 @@
   </span>
   <span (click)="isShowCart = !isShowCart" matSuffix class="cart-button">
     <mat-icon>shopping_basket</mat-icon>
-    <span *ngIf="selectedTilesNum" [innerText]="selectedTilesNum" class="cart-selected-tiles"></span>
+    <span *ngIf="selectedProductsNum" [innerText]="selectedProductsNum" class="cart-selected-tiles"></span>
   </span>
 </mat-form-field>
