--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -6,8 +6,10 @@
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #a7e3e8;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     width: 100%;
+    padding-bottom: 10px;
+    padding-top: 5px;
   }
 
   .selected-tiles-list {
