--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -7,60 +7,17 @@
   }
 
   .checkout {
-    .tiles-list {
-      display: flex;
-      overflow: hidden;
-      scroll-behavior: smooth;
-      flex-direction: column;
-      flex-wrap: wrap;
-      height: 366px;
-
-      .tile {
-        display: flex;
-        width: 50px;
-        height: 50px;
-        background: #ccc;
-        margin: 1px;
-        align-items: center;
-        justify-content: center;
-        flex-shrink: 0;
-        position: relative;
-
-        .tile-title {
-          position: absolute;
-          bottom: 10px;
-          background: rgba(0,0,0,0.1);
-          color: #fff;
-          padding: 0 5px;
-        }
-
-        .tile-checkbox {
-          position: absolute;
-          top: 10px;
-          left: 10px;
-        }
-
-        .tile-image {
-          max-width: 100%;
-          max-height: 100%;
-        }
-
-        .tile-selector {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          top: 0;
-          z-index: 2;
-          cursor: pointer;
-        }
-      }
-    }
+    padding-bottom: 40px;
 
     .cart {
       /deep/ .mat-icon {
         display: none;
       }
+    }
+
+    app-categories {
+      display: block;
+      margin-bottom: 40px;
     }
   }
 
