fixed tests, added coverage

--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,4 +1,5 @@
 <div
+  *ngIf="category"
   [class.active]="category.id === selectedCategoryId"
   [style.width.px]="categorySize"
   [style.height.px]="categorySize"
