--- a/src/app/components/search-products/search-products.component.scss
+++ b/src/app/components/search-products/search-products.component.scss
@@ -4,9 +4,9 @@
       width: 100%;
       margin: 0px 0 20px;
       padding: 2px 10px 10px;
-      border: 4px solid #666;
-      background: #252525;
-      color: #666;
+      border: 4px solid #25b9c6;
+      background: #166f76;
+      color: #ffffff;
 
       &.mat-form-field-should-float {
         .mat-form-field-wrapper {
@@ -46,7 +46,7 @@
           }
 
           .mat-form-field-label {
-            color: #666;
+            color: #ffffff;
           }
         }
 
