check last changes

--- a/src/app/components/products/products.component.scss
+++ b/src/app/components/products/products.component.scss
@@ -1,10 +1,14 @@
 :host {
-  .products-list {
-    display: flex;
-    overflow: hidden;
-    scroll-behavior: smooth;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 366px;
+  .products {
+    position: relative;
+
+    .products-list {
+      display: flex;
+      overflow: hidden;
+      scroll-behavior: smooth;
+      flex-direction: column;
+      flex-wrap: wrap;
+      height: 366px;
+    }
   }
 }
