--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,7 @@
-<app-preloader *ngIf="isLoading"></app-preloader>
+<div class="products" #productsRef (window:resize)="onWindowResize()">
+  <app-preloader *ngIf="isLoading"></app-preloader>
 
-<div *ngIf="!isLoading" #productsRef (window:resize)="onWindowResize()">
-  <div class="products-list" [style.height.px]="productSize * 3" [style.width.px]="productSize * productsColumnsPerPage">
+  <div *ngIf="!isLoading" class="products-list" [style.height.px]="productSize * 3" [style.width.px]="productSize * productsColumnsPerPage">
     <app-product
       *ngFor="let product of products"
       [product]="product"
